Arregla url de delete de profesores y titulares

--- a/src/main/templates/main/profesores.html
+++ b/src/main/templates/main/profesores.html
@@ -109,7 +109,7 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/profesores/' + id + '/delete);
+            $('#eliminar-form').attr('action', '/profesores/' + id + '/delete');
         }
     </script>
 {% endblock %}
