--- a/src/main/templates/main/titulares.html
+++ b/src/main/templates/main/titulares.html
@@ -112,7 +112,7 @@
 </div>
 <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/titulares/' + id + '/delete);
+            $('#eliminar-form').attr('action', '/titulares/' + id + '/delete');
         }
 </script>
 {% endblock %}
