- si no hay fecha que no sea None

--- a/src/escuela/templates/inscripciones-bajas.html
+++ b/src/escuela/templates/inscripciones-bajas.html
@@ -47,7 +47,12 @@
                                     <td>{{ inscripcion.grupo }}</td>
                                     <td>{{ inscripcion.estado }}</td>
                                     <td>{{ inscripcion.fecha_inicio }}</td>
-                                    <td>{{ inscripcion.fecha_fin }}</td>
+                                   <td>
+                                        {% if inscripcion.fecha_fin %}
+                                        {{ inscripcion.fecha_fin }}
+                                        {% endif %}
+                                    </td>
+
 
 
 
