Cobros con tarjeta y cheque

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -89,6 +89,7 @@
                         <li><a href="/reportes/compra">Libro Compra</a></li>
                         <li><a href="/reportes/venta">Libro Venta</a></li>
                         <li><a href="/reportes/pagos/tarjetas">Cobros con Tarjeta</a></li>
+                        <li><a href="/reportes/pagos/cheques">Cobros con Cheque</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
