- Agrega exportar CSV Grupo, Clase, Empleado, Titulares, Profesores

--- a/src/main/templates/main/titulares.html
+++ b/src/main/templates/main/titulares.html
@@ -2,19 +2,16 @@
 {% block content %}
 
 <div class="page-title">
-    <div class="title_left">
-        <h3>Lista de Titulares</h3>
+    <form>
+            <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
+                     <a class="btn btn-success pull-right" href="/escuela/titulares/csv"><i  class="fa fa-download"></i> CSV</a>
+                 &nbsp;
+
+                    <a class="btn btn-primary pull-right" href="/titulares/new"><i  class="fa fa-plus-square"></i> NUEVO TITULAR </a>
+            </div>
+            </form>
+
     </div>
-    <div class="title_right">
-        <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
-
-            <a class="btn btn-primary pull-right" href="/titulares/new"><i class="fa fa-plus-square"></i> NUEVO
-                TITULAR</a>
-
-        </div>
-    </div>
-
-</div>
 <div class="clearfix"></div>
 
 <div class="row">
