--- a/src/main/templates/main/empleados.html
+++ b/src/main/templates/main/empleados.html
@@ -7,12 +7,16 @@
             <h3>Lista de Empleados</h3>
         </div>
         <div class="title_right">
+         <form>
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
+                     <a class="btn btn-success pull-right" href="/escuela/empleados/csv"><i  class="fa fa-download"></i> CSV</a>
+                 &nbsp;
 
-                    <a class="btn btn-primary pull-right" href="/empleados/new"><i  class="fa fa-plus-square"></i> NUEVO EMPLEADO</a>
-
-                </div>
+                    <a class="btn btn-primary pull-right" href="/empleados/new"><i  class="fa fa-plus-square"></i> NUEVO EMPLEADO </a>
             </div>
+            </form>
+
+    </div>
 
     </div>
     <div class="clearfix"></div>
