Mas ayuda a usuario actualizada.

--- a/src/reportes/templates/alumnos_por_grupo.html
+++ b/src/reportes/templates/alumnos_por_grupo.html
@@ -85,15 +85,6 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">A modificar</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">REPORTE</span></strong></span></p>
 {% endblock %}
-{% block ayuda_contenido %}
-<p style="text-align: center;"> <span style="font-size: 14pt;">Cargar los datos del profesor, según sean <strong>obligatorio u opcionales</strong></span>.</p>
-    <p style="text-align: center;">&nbsp;</p>
-        <img src="/static/img/pasos_nuevo_profesor.gif" alt="pasos_nuevo_profesor" width="800"  style="display: block;
-    margin-left: auto;
-    margin-right: auto;
-   "/>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Guardar registro de profesor, clic en : <img src="/static/img/guardar.png" alt="guardar" /></strong></span></p>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea guardar el registro dar clic en : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
-{% endblock %}
+
