--- a/src/reportes/templates/asistencia.html
+++ b/src/reportes/templates/asistencia.html
@@ -100,7 +100,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Finanzas </span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">REPORTE </span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
 
