--- a/src/reportes/templates/pagos-rango-fecha.html
+++ b/src/reportes/templates/pagos-rango-fecha.html
@@ -128,15 +128,8 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nueva Venta</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">REPORTE</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;"> <span style="font-size: 12pt;">Cargar los datos del empleado, según sean <strong>obligatorio u opcionales</strong>.</span></p>
-    <p style="text-align: center;">&nbsp;</p>
-        <img src="/static/img/pasos_cuentaslista.gif" alt="pasos_cuentaslista" width="800"  style="display: block;
-    margin-left: auto;
-    margin-right: auto;
-   "/>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Guardar registro de empleado, clic en : <img src="/static/img/guardar.png" alt="guardar" /></strong></span></p>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea guardar el registro dar clic en : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
+
 {% endblock %}
