--- a/src/tienda/templates/estado_cuenta.html
+++ b/src/tienda/templates/estado_cuenta.html
@@ -162,7 +162,7 @@
         <p><br /><span style="color: #003366;"><strong>3. Genrerar cuenta: se crea de forma manual la siguente factura del titular o alumno.
             <img src="/static/img/generar_cuenta.png" alt="generar_cuenta" /></strong></span></p>
     <hr>
-        <p><br /><span style="color: #003366;"><strong>4.  Filtrar la cantidad de productos en la pantalla.</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>4.  Filtrar la cantidad de cuentas en la pantalla.</strong></span></p>
 
     <hr>
         <p><br /><span style="color: #003366;"><strong>5. Buscar estado de cuenta <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
