--- a/src/tienda/templates/ventas-canceladas.html
+++ b/src/tienda/templates/ventas-canceladas.html
@@ -169,7 +169,7 @@
         <p><span style="color: #003366;"><strong>2. Lista de ventas canceladas :&nbsp;Se puede ver la lista de todos las ventas canceladas. </strong></span></p>
         <p>&bull; <strong><em>Una vez cancelado el registro de venta los mismos se encuentran en estado <strong>inactivo</strong>.</em></strong></p>
     <hr>
-        <p><br /><span style="color: #003366;"><strong>3.  Filtrar la cantidad de productos en la pantalla.</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>3.  Filtrar la cantidad de ventas canceladas en la pantalla.</strong></span></p>
     <hr>
         <p><br /><span style="color: #003366;"><strong>4. Buscar ventas <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
         <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nro de Factura, Cliente, Monto Total). </em></strong></p>
