--- a/src/tienda/templates/ventas-form.html
+++ b/src/tienda/templates/ventas-form.html
@@ -181,7 +181,18 @@
         <p style="text-align: center;"> <span style="font-size: 12pt;"><strong>Acciones  : </strong></span></p>
 
         <p> <br /><span style="color: #003366;"><strong>&bull; Para generar la factura presione : <img src="/static/img/icono_pagar.png" alt="icono_pagar" /></strong></span></p>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea generar la factura presione : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
+         <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea generar la factura presione : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
+        <hr>
+         <p style="text-align: center;"> <span style="font-size: 12pt;"><strong>Realice los siguientes pasos para pagar  : </strong></span></p>
+        <img src="/static/img/pasos_formapago.gif" alt="pasos_formapago" width="800"  style="display: block; margin-left: auto;margin-right: auto;"/>
+        <p><span style="color: #003366;"><strong> 1. Elegir tipos de pagos: Puede elegir solo uno o varios (Tarjeta, Cheque o Efectivo).
+        <br><br>2. Monto Efectivo: Monto que desea pagar en efectivo.
+            <br><br>3. Monto Abonado: Monto que se dará en efectivo a la cajera y poder calcular el vuelto.
+            <br><br>4. Monto Tarjeta: Total a pagar por tarjeta de débito o crédito.
+            <br><br>5. Datos de tarjeta e impresión de post:
+            <p> <br /><span style="color: #003366;"><strong>&bull; Últimos número de tarjeta: son los 4 número. </strong></span></p>
+            <p> <br /><span style="color: #003366;"><strong>&bull; Número de autorización: número del ticket que imprime luego de ser autorizado el pago.</strong></span></p>
+            <br><span style="color: #003366;"><strong>6. Guardar Pago </strong><img src="/static/img/guardar_azul.png" alt="guardar_azul" /></span></strong></span></p>
 {% endblock %}
 
 
