--- a/src/tienda/templates/ventas.html
+++ b/src/tienda/templates/ventas.html
@@ -184,7 +184,7 @@
         <p>&bull; <strong><em>Una vez cancelado el registro, podrá consular en <strong>Ventas canceladas</strong>.</em></strong></p>
 
     <hr>
-        <p><br /><span style="color: #003366;"><strong>4.  Filtrar la cantidad de productos en la pantalla.</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>4.  Filtrar la cantidad de ventas en la pantalla.</strong></span></p>
     <hr>
         <p><br /><span style="color: #003366;"><strong>5. Buscar ventas <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
         <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nro de Factura, Cliente, Monto Total). </em></strong></p>
