--- a/src/main/templates/main/profesores.html
+++ b/src/main/templates/main/profesores.html
@@ -3,7 +3,7 @@
 
    <div class="page-title">
         <div class="title_left">
-            <h3>Lista de Alumnos</h3>
+            <h3>Lista de Profesores</h3>
         </div>
         <div class="title_right">
             <form>
