--- a/src/tienda/templates/recibos-rango-fecha.html
+++ b/src/tienda/templates/recibos-rango-fecha.html
@@ -128,32 +128,24 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Total de Ventas del Día</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Recibos</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;"><span style="font-size: 14pt;">Podr&aacute; visualizar a todas <strong>Ventas del Día</strong> realizadas con descripción detallada.</span></p>
+<p style="text-align: center;"><span style="font-size: 14pt;">Lista todos los recibos realizados a nombre del cliente<strong> por rango de fecha seleccionado</strong>.</span></p>
     <p style="text-align: center;">&nbsp;</p>
-        <img src="/static/img/pasos_ventas_fecha.gif" alt="pasos_ventas_fecha" width="800"  style="display: block;
+        <img src="/static/img/pasos_recibolista.gif" alt="pasos_recibolista" width="800"  style="display: block;
     margin-left: auto;
     margin-right: auto;
    "/>
-        <br><hr>
-        <p><span style="color: #003366;"><strong> 1. Rango de Fecha de la transacción anteriores o actual.
-    <hr>
-        <p><span style="color: #003366;"><strong>2. Lista de ventas :&nbsp;Se puede ver la lista de todos las ventas y realizar las siguientes acciones. </strong></span></p>
-    <hr>
-        <p><br /><span style="color: #003366;"><strong>3. Acciones que podemos realizar sobre cada registro de ventas.</strong></span></p>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Ver detalle venta : <img src="/static/img/detalle.png" alt="detalle" /></strong></span></p>
-        <p> <br /><span style="color: #003366;"><strong>&bull; Cancelar Venta : <img src="/static/img/cancelar_rojo.png" alt="cancelar_rojo" /></strong></span></p>
-        <p>&bull; <strong><em>Una vez cancelado el registro, podrá consular en <strong>Ventas canceladas</strong>.</em></strong></p>
-
-    <hr>
-        <p><br /><span style="color: #003366;"><strong>4.  Filtrar la cantidad de productos en la pantalla.</strong></span></p>
-    <hr>
-        <p><br /><span style="color: #003366;"><strong>5. Buscar ventas <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
-        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nro de Factura, Cliente, Monto Total). </em></strong></p>
-    <hr>
-
-        <p><br /><span style="color: #003366;"><strong>6.  Para crear nueva venta, haga clic en el ícono <img src="/static/img/nueva_venta.png" alt="nueva_venta" /></strong></span></p>
-        <p>&bull; <strong><em>Una vez creada la nueva venta, este se encontrará en la lista. </em></strong></p>
+        <br>
+        <hr>
+            <p><span style="color: #003366;"><strong> 1. Rango de Fecha de la transacción anteriores o actual.
+        <hr>
+            <p><br /><span style="color: #003366;"><strong>2. Lista las cuentas pendientes.</strong></span></p>
+        <hr>
+            <p><br /><span style="color: #003366;"><strong>3. Busqueda de reibos. <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+            <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Fecha, Nro Factura, Nro Recibo, Cliente). </em></strong></p>
+        <hr>
+            <p><br /><span style="color: #003366;"><strong>4.  Exportar registros de recibos a Excel.</strong>
+                <img src="/static/img/informe_excel.png" alt="informe_excel" /></span></p>
 {% endblock %}
