--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -39,6 +39,7 @@
                                 <th>Nombre</th>
                                 <th>Apellido</th>
                                 <th>Fecha de Nacimiento</th>
+                                <th>Edad</th>
                                 <th>Dirección</th>
                                 <th>Teléfono</th>
                                 <th>Otro contacto</th>
@@ -56,6 +57,7 @@
                                     <td>{{ alumno.nombre }}</td>
                                     <td>{{ alumno.apellido }}</td>
                                     <td>{{ alumno.fecha_nacimiento }}</td>
+                                    <td>{{ alumno.edad }}</td>
                                     <td>{{ alumno.direccion }}</td>
                                     <td>{{ alumno.telefono1 }}</td>
                                     <td>{{ alumno.telefono2 }}</td>
