--- a/src/escuela/templates/inscripciones.html
+++ b/src/escuela/templates/inscripciones.html
@@ -6,11 +6,15 @@
             <h3>Lista de Inscripciones</h3>
         </div>
         <div class="title_right">
+
+         <form>
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
+                     <a class="btn btn-success pull-right" href="/escuela/inscripciones/csv"><i  class="fa fa-download"></i> CSV</a>
+                 &nbsp;
 
-                    <a class="btn btn-primary pull-right" href="/escuela/inscripciones/new"><i  class="fa fa-plus-square"></i> NUEVA INSCRIPCION</a>
-
-                </div>
+                    <a class="btn btn-primary pull-right" href="/escuela/inscripciones/new"><i  class="fa fa-plus-square"></i> NUEVA INSCRIPCION </a>
+            </div>
+            </form>
             </div>
 
     </div>
