- Agrega compras por rango de fecha

--- a/src/main/templates/main/alumnos-form.html
+++ b/src/main/templates/main/alumnos-form.html
@@ -46,7 +46,9 @@
         $(document).ready(function () {
             configurarICheck($("[name=sexo]"));
             configurarICheck($("[name=estado]"));
+            useAutonumericCurrency('#select2-id_cedula-container','');
         })
+
     </script>
 {% endblock %}
 
