--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -69,6 +69,7 @@
                     <ul class="nav child_menu">
                         <li><a href="/tienda/caja">Caja Chica Diaria</a></li>
                         <li><a href="/tienda/compras">Compras Diaria</a></li>
+                        <li><a href="/tienda/compras/fechas">Compras por rango de fechas</a></li>
                         <li><a href="/tienda/ventas">Ventas Diarias</a></li>
                         <li><a href="/tienda/ventas/canceladas">Ventas canceladas Diarias</a></li>
                         <li><a href="/tienda/ventas/fechas">Ventas por rango de fechas</a></li>
