--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+{% load humanize %}
+{% load intdot %}
 
     <div class="page-title">
         <div class="title_left">
@@ -53,7 +55,7 @@
 
                             {% for alumno in alumnos %}
                                 <tr>
-                                    <td>{{ alumno.cedula }}</td>
+                                    <td>{{ alumno.cedula |intdot   }}</td>
                                     <td>{{ alumno.nombre }}</td>
                                     <td>{{ alumno.apellido }}</td>
                                     <td>{{ alumno.fecha_nacimiento }}</td>
