--- a/src/tienda/templates/clientes.html
+++ b/src/tienda/templates/clientes.html
@@ -51,7 +51,7 @@
 
                                     <td><a class="btn btn-info btn-xs" href="/tienda/clientes/{{ cliente.ruc_cliente }}/update">Editar </a>
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
-                                           data-target="#eliminar-modal" onclick="formEliminar({{ cliente.ruc_cliente }})">Eliminar</a></td>
+                                           data-target="#eliminar-modal" onclick="formEliminar('{{ cliente.ruc_cliente }}')">Eliminar</a></td>
                                 </tr>
                             {% endfor %}
 
