--- a/src/escuela/templates/inscripciones-inactivas.html
+++ b/src/escuela/templates/inscripciones-inactivas.html
@@ -3,7 +3,7 @@
 
     <div class="page-title">
         <div class="title_left">
-            <h3>Lista de Inscripciones</h3>
+            <h3>Lista de Inscripciones Inactivas</h3>
         </div>
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
