Balance por año

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -87,6 +87,7 @@
                         <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
                         {% if perms.reporte.balance %}
                             <li><a href="/reportes/balance">Balance Mensual</a></li>
+                            <li><a href="/reportes/balance_anio">Balance Anual</a></li>
                         {% endif %}
                         <li><a href="/reportes/compra">Libro Compra</a></li>
                         <li><a href="/reportes/venta">Libro Venta</a></li>
