--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -53,7 +53,7 @@
                         <li><a href="/tienda/ventas/new">Vender</a></li>
 
 
-                        <li><a href="/escuela/cuentas">Cuentas a cobrar</a></li>
+                        <li><a href="/escuela/cuentas">Estado de Cuotas</a></li>
                         <li><a href="/tienda/clientes">Clientes</a></li>
                         <li><a href="/tienda/productos">Productos</a></li>
                         {% if perms.tienda.factura_list %}
