--- a/src/main/templates/top_navigation.html
+++ b/src/main/templates/top_navigation.html
@@ -20,7 +20,7 @@
 {#            </a>#}
 {#          </li>#}
 {#          <li><a href="javascript:;">Help</a></li>#}
-          <li><a href="{% url 'mail_balance' %}"><i class="fa fa-mail-forward pull-right"></i> Enviar Balance a correo</a></li>
+          <li><a href="{% url 'mail_balance' %}"><i class="glyphicon glyphicon-send pull-right"></i> Enviar Balance a correo</a></li>
           <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out pull-right"></i> Salir</a></li>
         </ul>
       </li>
